# Agent-Loop-Skills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
docs/: api-keys.md  authoring.md  compatibility.md  skill-authoring-rules.md
loops/adversarialMLAutoResearch/: README.md  SKILL.md  schema.example.yaml
loops/alpha-evolve/: SKILL.md
loops/analysisVerifyLoop/: SKILL.md  schema.example.yaml
loops/anomalyInvestigationLoop/: SKILL.md
loops/blue-team/: SKILL.md
loops/codeRefactorLoop/: SKILL.md  schema.example.yaml
loops/dataAnalysisLoop/: SKILL.md  schema.example.yaml
loops/deepAgentMLAutoresearch/: README.md  SKILL.md  literature_schema.json  schema.example.yaml
loops/duelingMLAutoresearch/: README.md  SKILL.md  schema.example.yaml
loops/highTemperatureMLAutoresearch/: README.md  SKILL.md  schema.example.yaml
loops/hypothesisGenLoop/: SKILL.md  schema.example.yaml
loops/karpathy/: README.md  SKILL.md  schema.example.yaml
loops/lazyAlphaEvolve/: README.md  SKILL.md  schema.example.yaml
loops/literatureSearch/: SKILL.md
loops/literatureSurveyLoop/: SKILL.md  schema.example.yaml
loops/ml-autoresearch/: SKILL.md
loops/plan-loop/: SKILL.md
loops/powerAnalysisLoop/: SKILL.md
loops/purple-team/: SKILL.md
loops/redTeamLoop/: SKILL.md
loops/researchProposalLoop/: README.md  SKILL.md  rubric.md  schema.example.yaml
loops/researchQuestionLoop/: SKILL.md  schema.example.yaml
showcase/: plot_progress.py
templates/: SKILL.template.md  keys.py
(+81 files in other folders)
